# correlation-skew

./: CMakeLists.txt
cmd/: cmdCalculateCorrelationSkew.cpp  cmdCalculateCorrelationSkewCorrelatedJumps.cpp  cmdDispersionTradePricer.cpp  cmdMCOptionPricerBS.cpp  cmdMCOptionPricerJumpDiff.cpp
main/: CMakeLists.txt  Calibratore.cpp  Calibratore.hpp  Functional.hpp  MertonCalibrator.cpp  MertonCalibrator.hpp  RndNumbers.cpp  RndNumbers.hpp  bsImplVol.cpp  bsImplVol.hpp  calculateCorrelationSkew.cpp  calculateCorrelationSkew.hpp  dll_interface.cpp  froot.cpp  froot.hpp  libCorrelationSkew.cpp
main/distribuzioni/: BernoulliDistribution.cpp  BernoulliDistribution.hpp  BiVariateJumpDistribution.cpp  BiVariateJumpDistribution.hpp  CMakeLists.txt  LognormalDistribution.cpp  LognormalDistribution.hpp  LognormalSumDistribution.cpp  LognormalSumDistribution.hpp  NormalDistribution.cpp  randomGenerator.cpp  (+4 more)
prove/: Antitetico.cpp  Antitetico.hpp  DiscretizzatoreEulero.cpp  DiscretizzatoreEulero.hpp  basketPricing.cpp  libExample.cpp  prova  prova.hpp  provaConstraints.cpp  puntatoreNormalDistrib.cpp
test/: CMakeLists.txt  testBSPricer.cpp  testBasketPricing.cpp  testBernoulliJumpDistribution.cpp  testBiVariateJumpDistribution.cpp  testBiVariateJumpDistribution2.cpp  testBook.txt  testBoxMuller.cpp  testBsImplVol.cpp  testCalculateCorrelationSkewJumpDiffusion.cpp  testCalculateCorrelationSkewJumpDiffusionWithCorrelatedJumps.cpp  testCalculateVolatilitySurface.cpp  testCalibrazioneMerton.cpp  testCalibrazioneProcessWithCorrelatedJumps.cpp  testCorrelationSkewCalculation.cpp  testDLL.cpp  testJuBasketPricing.cpp  testMCOptionPricerBS.cpp  testMCOptionPricerJumpDiff.cpp  testMCOptionPricerJumpDiffCorrelatedJumps.cpp  testMertonFormula.cpp  testNormalDistribution.cpp  testPoissonDistribution.cpp  testRand.cpp  testUpdateCumulatedPayoff.cpp  testbsFormula.cpp
(+91 files in other folders)
